--- a/mgr/praca/main.tex
+++ b/mgr/praca/main.tex
@@ -111,6 +111,15 @@ TODO: dodać
 \end{figure}
 }
 
+\newcommand{\rysunekW}[4] {
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=#4\textwidth]{#1}
+    \caption{#2}
+    #3
+\end{figure}
+}
+
 % koniec definicji
 
 \begin{document}
