--- a/mgr/praca/teoria.tex
+++ b/mgr/praca/teoria.tex
@@ -1,34 +1,89 @@
 \chapter{Podstawy teoretyczne}
-\section{Wyznaczanie położenia na podstawie odległości od stałych punktów}
+\section{Wyznaczanie położenia na podstawie odległości od punktów stałych}
+
+Zadaniem prezentowanego prototypu jest wyznaczenie położenia głowicy w przestrzeni na podstawie
+podległości od znanych punktów stałych, niech $\boldsymbol{x}$ będzie szukanym punktem w przestrzeni,
+$\boldsymbol{y_1,y_2,y_3}$ stałymi punktami o znanym położeniu w przestrzeni, a $r_1,r_2,r_3$ wyznaczonymi odległościami, 
+rysunek \ref{fig:polozenie}. Szukane położenie punktu $\boldsymbol{x}$ możemy wyznaczyć za pomocą układu równań:
+\[
+ \begin{cases}
+    |\boldsymbol{y_1} - \boldsymbol{x}| = r_1
+ \\ |\boldsymbol{y_2} - \boldsymbol{x}| = r_2
+ \\ |\boldsymbol{y_3} - \boldsymbol{x}| = r_3
+ \end{cases}
+\]
+Zauważmy, że znając odległość $\boldsymbol{x}$ od jednego punktu stałego wiemy, że $\boldsymbol{x}$ będzie leżał na
+sferze o promieniu równym danej odległości. Znając dwie odległości możemy ograniczyć poszukiwania do części wspólnej dwóch sfer,
+czyli okręgu. Dla znanych trzech odległości dostajemy cześć wspólną okręgu ze sferą, czyli dwa możliwe punkty.
+Mogłoby się wydawać, że tyle informacji nie jest wystarczających do jednoznacznego określenia położenia
+szukanego punktu, jednak te dwa punktu są na ogół od siebie daleko oddalone i bez większych problemów
+możemy założyć, że jedno z rozwiązań jest naszym szukanym punktem.
+
+\rysunekW{polozenie}{wyznaczenie położenia na podstawie odległości od punktów stałych}{\label{fig:polozenie}}{0.7}
+
+Powyższy układ równań rozwija się do:
+\[
+ \begin{cases}
+     (y_{11}-x_1)^2 + (y_{12}-x_2)^2 + (y_{13}-x_3)^2 = r_1^2
+ \\  (y_{21}-x_1)^2 + (y_{22}-x_2)^2 + (y_{23}-x_3)^2 = r_2^2
+ \\  (y_{31}-x_1)^2 + (y_{32}-x_2)^2 + (y_{33}-x_3)^2 = r_3^2
+ \end{cases}
+\]
+
+Ponieważ mamy pewną powolność w doborze punktów $\boldsymbol{y_i}$ dla uproszenia możemy przyjąć, że:
+$\boldsymbol{y_1}=(\frac{a}{2},0,0), \boldsymbol{y_2}=(-\frac{a}{2},0,0), \boldsymbol{y_3}=(0,h,0)$, czyli są wierzchołkami
+trójkąta równoramiennego o wysokości $h$ i podstawie $a$, wtedy układ równań upraszcza
+się do postaci:
+\[
+ \begin{cases}
+     (\frac{a}{2}-x_1)^2 + x_2^2 + x_3^2 = r_1^2
+ \\  (\frac{a}{2}+x_1)^2 + x_2^2 + x_3^2 = r_2^2
+ \\  x_1^2 + (h-x_2)^2 + x_3^2 = r_3^2
+ \end{cases}
+\]
+z czego ostatecznie otrzymujemy:
+\[
+ \begin{cases}
+     x_1 = \frac{r_2^2 - r_1^2}{2a}
+ \\  x_2 = \frac{6r_2^2 - 4r_3^2 - 2r_1^2 + a^2}{8h}  + \frac{h}{2}
+ \\  x_3 = \pm \sqrt{r_3^2-x_1^2-(h-x_2)^2}
+ \end{cases}
+\]
+
+
+
 
 
 
 \section{Pomiar odległości za pomocą ultradźwięków}
 
-Prezentowany prototyp wykorzystuje metodę pomiaru czasu jaki 
+Prezentowany prototyp do pomiaru odległości wykorzystuje metodę pomiaru czasu jaki 
 potrzebuje sygnał ultradźwiękowy aby pokonać drogę od nadajnika do odbiornika,
-rysunek \ref{fig:pomiar_odleglosci} przedstawia poglądowy schemat pomiarowy.
+rysunek \ref{fig:pomiar_odleglosci}.
 \rysunekW{pomiar_odleglosci}{pomiar odległości za pomocą ultradźwięków}{\label{fig:pomiar_odleglosci}}{0.4}
 
 Znając prędkość rozchodzenia się fal dźwiękowych w powietrzy oraz czas jaki fala dźwiękowa potrzebowała
-aby pokonać dystans od odbiornika do nadajnika jesteśmy w stanie w prosty sposób wyznaczyć szukaną odległość.
+aby pokonać dany dystans jesteśmy w stanie wyznaczyć szukaną odległość.
 
-Niestety prędkość dźwięku w powietrzu jest mocno zależy od panujących warunków atmosferycznych \cite{bib:soundSpeed},  
-głównym czynnikiem wpływającym na prędkość dźwięku jest temperatura,
-dla gazu doskonałego prędkość ta wyraża się wzorem:
+Prędkość dźwięku w powietrzu jest mocno zależy od panujących warunków atmosferycznych \cite{bib:soundSpeed},  
+głównym czynnikiem na nią wpływającym jest temperatura.
+dla gazu doskonałego prędkość wyraża się wzorem:
 \[
 V_{air} = 331.3  \frac{m}{s}  \sqrt{1+\frac{T}{273.15}}
 \]
 gdzie: $T$ jest temperaturą w stopniach Celsjusza ($^\circ$C).
-wzór ten możemy przybliżyć za pomocą rozwinięcia Taylora do:
+Wzór ten możemy przybliżyć za pomocą rozwinięcia Taylora dla temperatur bliskich temperaturze pokojowej ($25^\circ$C):
 \[
- V_{air} = (331.3  +  0.606T) \frac{m}{s}
+ V_{air} = (346.13  +  0.580(T - 25^\circ)) \frac{m}{s}
 \]
 
-Mimo iż współczynnik temperaturowy jest stosunkowo mały i stanowi jedynie 0.18\% całej prędkości
-to przy pomiarach odległości rzędu metrów i rozdzielczości milimetrowych staje się bardzo istotny. 
-Dlatego w prezentowanym urządzeniu istotną częścią jest kalibracja wstępna, podczas której
-prędkość dźwięku jest na nowo wyznaczana. Efektem ubocznym kalibracji jest pomiar temperatury otoczenia.
+Mimo iż współczynnik temperaturowy jest stosunkowo mały i stanowi jedynie 0.17\% całej prędkości
+to przy pomiarach odległości rzędu metrów i rozdzielczościach rzędu milimetrów staje się istotny. 
+Dlatego w prezentowanym prototypie istotną częścią stanowi kalibracja wstępna, podczas której
+wyznaczana jest aktualna prędkość dźwięku, ubocznym efektem kalibracji jest pomiar temperatury otoczenia.
+Przez zależność zależność temperaturową urządzenie nadaje się jedynie do zastosowań w pomieszczeniach
+w których nie zmienia się temperatura otoczenia w czasie pomiarów.
+
 
 
 
