--- a/mgr/praca/main.tex
+++ b/mgr/praca/main.tex
@@ -20,8 +20,8 @@
 \author{Paweł Stawicki}
 \nralbumu{189254}
 
-\title{Skaner 3D (??)}
-\tytulang{3D scanner}
+\title{Wyznaczanie pozycji oraz orientacji w przestrzeni za pomocą ultradźwięków, skaner 3D}
+\tytulang{Determining position and orientation in space using ultrasound, 3D scanner}
 
 \kierunek{Informatyka}
 \opiekun{dra Marcina Peczarskiego}
