--- a/mgr/praca/main.tex
+++ b/mgr/praca/main.tex
@@ -5,6 +5,7 @@
 \usepackage{amsmath}
 \usepackage{algorithmic}
 \usepackage{algorithm}
+\usepackage{pdfpages}
 \usepackage[utf8]{inputenc}
 \usepackage[pdfborder={0 0 0}]{hyperref}
 
