--- a/mgr/praca/mp3d.tex
+++ b/mgr/praca/mp3d.tex
@@ -84,4 +84,9 @@ jak i $\sum\limits_{t=0}^{n-1} f^2(t+x)$ wymaga jedynie liniowej liczby operacji
  wyznaczy pozycję głowicy w przestrzeni jak i jego orientację uwzględniając przy tym 
  kształt głowicy (nadmiarowość danych) jak i prawdopodobieństwa że znaleziony wzorzec jest na danej pozycji.
  
- Kolejną zadaniem modułu \textit{find\_pattern.py} jest 
+ Kolejną zadaniem modułu \textit{find\_pattern.py} jest uaktualnianie wzorca z biegiem czasu.
+ Wraz ze zmianą kąta nachylenia nadajnika względem odbiornika zmienia się znacząco kształt sygnału,
+ dlatego jeśli odnajdziemy szukany wzorzec którego moc sygnału jest wystarczająco silna to
+ podmieniany jest na niego wzorzec.
+ 
+ 
