--- a/mgr/praca/mp3d.tex
+++ b/mgr/praca/mp3d.tex
@@ -130,3 +130,17 @@ oraz na ich podstawie wyznaczana jest pozycja i orientacja głowicy.
 
 zadaniem modułu \textit{info.py} jest wyświetlenie informacji związanych z siłą odbieranych sygnałów.
 
+\section{Kalibracja}
+
+Przed każdym uruchomieniem urządzenia wymagana jest kalibracja.
+Kalibracja sprowadza się do ustawienia głowicy w odległości 2 metrów od odbiornika
+uruchomienia urządzenia oraz zaznaczenia 12 wzorców potrzebnych do odnalezienia 
+odebranego sygnału.
+Program na podstawie odległości i czasu dodarcia sygnału wylicza prędkość dźwięku 
+w danym środowisku. Co ciekawe, wypadkową wyliczonej prędkości jest temperatura otoczenia.
+
+Rysunek \ref{fig:blad_korel} przedstawia widok 12 sygnałów wraz z zaznaczonymi wzorcami.
+
+
+
+
