--- a/mgr/praca/main.tex
+++ b/mgr/praca/main.tex
@@ -6,6 +6,7 @@
 \usepackage{algorithmic}
 \usepackage{algorithm}
 \usepackage{pdfpages}
+\usepackage{sistyle}
 \usepackage[utf8]{inputenc}
 \usepackage[pdfborder={0 0 0}]{hyperref}
 
